<resources>
    <string name="app_name">Register_and_Login</string>
    <string name="sign_in">LOG IN</string>
    <string name="page">PAGE</string>
    <string name="please_login_with_aunthenticated_credentials">Please login with aunthenticated credentials</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="type">Type...</string>
    <string name="login">Login</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign">Sign</string>
    <string name="up">Up</string>
    <string name="create_a_new_account_to_continue">Create a new account to continue</string>
    <string name="set_user_name">Set user name</string>
    <string name="set_email_address">Set Email Address</string>
    <string name="set_password">Set Password</string>
    <string name="set_d_o_b">Set D.O.B</string>
    <string name="d_o_b">D.O.B</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="set_gender">Set Gender</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="thank_you_for_creating_an_account">Thank you for creating an account</string>
    <string name="place_name">Place Name</string>
    <string name="place_country">Place Country</string>
</resources>