<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login2"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/sign"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/akaya_telivigala"
            android:gravity="center"
            android:text="@string/up"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account_to_continue" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/set_user_name" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="20dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        android:background="@drawable/shape">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLength="20"
            android:drawableStart="@drawable/baseline_person_pin_24"
            android:hint="@string/type"
            android:inputType="text"
            android:background="@drawable/shape"
            android:padding="10dp"

            />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/set_email_address" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="20dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/type"
            android:inputType="textEmailAddress"
            android:background="@drawable/shape"


            />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/set_password" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="20dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/userpass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:maxLength="8"
            android:drawableStart="@drawable/baseline_lock_person_24"
            android:hint="@string/type"
            android:inputType="numberPassword"
            android:background="@drawable/shape"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:text="@string/set_d_o_b"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="20dp"
        android:layout_margin="10dp">
    <EditText
        android:id="@+id/userdob"
        android:layout_width="match_parent"
        android:inputType="date"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:clickable="false"
        android:padding="10dp"
        android:drawableStart="@drawable/baseline_calendar_month_24"
        android:hint="@string/d_o_b"
        android:background="@drawable/shape"
        android:layout_height="60dp"

        />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginStart="20dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="20dp"
        android:layout_margin="10dp">
    <EditText
        android:id="@+id/userph"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape"
        android:inputType="number"
        android:hint="@string/phone"
        android:maxLength="10"
        android:drawableLeft="@drawable/baseline_phone_24"
        android:padding="10dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/set_gender"/>


    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginStart="40dp"
            />
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/female"/>

    </RadioGroup>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:background="@color/red"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_for_creating_an_account"
        />
</LinearLayout>
</ScrollView>